# dataspeed_dbw_ros2

./: .gitignore  README.md  bitbucket-pipelines.yml
dataspeed_dbw_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_dbw_common/include/dataspeed_dbw_common/: PlatformVersion.hpp  SimpleParams.hpp
dataspeed_dbw_common/tests/: test_platform_version.cpp
dataspeed_dbw_gateway/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_dbw_gateway/src/: FcaGateway.cpp  FiatGateway.cpp  FordGateway.cpp  PolarisGateway.cpp  generic_message.hpp
dataspeed_dbw_gateway/tests/: test_generic_message.cpp
dataspeed_dbw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_ulc/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_ulc_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_ulc_can/src/: UlcNode.cpp
dataspeed_ulc_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_fca/: CHANGELOG.rst  package.xml
dbw_fca/scripts/: ros_install.bash
dbw_fca_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_fca_can/include/dbw_fca_can/: PlatformVersion.h  dispatch.h
dbw_fca_can/launch/: dbw.launch  dbw.launch.xml
dbw_fca_can/scripts/: misc_hvac_cmd.py
dbw_fca_can/src/: DbwNode.cpp  DbwNode.h  DbwNode.hpp
dbw_fca_can/tests/: test_platform_version.cpp
dbw_fca_description/: CHANGELOG.rst  package.xml
dbw_fca_description/launch/: urdf.launch.xml
dbw_fca_joystick_demo/: CHANGELOG.rst  package.xml
dbw_fca_joystick_demo/launch/: joystick_demo.launch  joystick_demo.launch.xml
dbw_fca_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.hpp
dbw_fca_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_fca_msgs/bmr/1.1.1-1.1.2/: MiscCmd.bmr  MiscCmd.saved
dbw_fca_msgs/bmr/1.2.0-1.2.1/: SteeringCmd.bmr  SteeringCmd.saved  ThrottleInfoReport.bmr  ThrottleInfoReport.saved
dbw_fca_msgs/include/dbw_fca_msgs/: TurnSignalCmd.h
dbw_fca_msgs/msg/: HvacButtonCmd.msg  Misc2Report.msg  MiscCmd.msg  SteeringCmd.msg  ThrottleInfoReport.msg
dbw_ford/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_ford_can/: CHANGELOG.rst  CMakeLists.txt  nodelets.xml  package.xml
dbw_ford_can/include/dbw_ford_can/: ModuleVersion.h  PlatformMap.h  PlatformVersion.h  dispatch.h  dispatch.hpp  pedal_lut.h  sonar_lut.h
dbw_ford_can/launch/: dbw.launch  dbw.launch.xml  offline.launch
dbw_ford_can/scripts/: brake_sweep.py  brake_thrash.py  startup_dbw.bash  startup_joystick.bash  startup_joystick_rviz.bash  throttle_sweep.py  throttle_thrash.py  wheel_counts_per_km.py
dbw_ford_can/src/: DbwNode.cpp  DbwNode.h  DbwNode.hpp  node.cpp  nodelet.cpp
dbw_ford_can/tests/: test_module_version.cpp  test_pedal_lut.cpp  test_platform_map.cpp  test_platform_version.cpp  test_sonar_lut.cpp
dbw_ford_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_ford_description/launch/: f150.launch  f150.launch.xml  mkz.launch  mkz.launch.xml  rviz.launch
dbw_ford_description/tests/: CMakeLists.txt
dbw_ford_joystick_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_ford_joystick_demo/launch/: joystick_demo.launch  joystick_demo.launch.xml
dbw_ford_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.h  JoystickDemo.hpp
dbw_ford_msgs/: CHANGELOG.rst  CMakeLists.txt  mapping_rules.yaml  package.xml
dbw_ford_msgs/bmr/: README.md
dbw_polaris/: CHANGELOG.rst  package.xml
dbw_polaris/scripts/: ros_install.bash  sdk_install.bash
dbw_polaris_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
dbw_polaris_can/include/dbw_polaris_can/: PlatformVersion.h
dbw_polaris_can/launch/: dbw.launch  dbw.launch.xml
dbw_polaris_can/scripts/: brake_sine.py  throttle_sine.py
dbw_polaris_can/src/: DbwNode.cpp  DbwNode.h  DbwNode.hpp
dbw_polaris_can/tests/: test_platform_version.cpp
dbw_polaris_description/: CHANGELOG.rst  package.xml
dbw_polaris_description/launch/: urdf.launch
dbw_polaris_joystick_demo/: CHANGELOG.rst  package.xml
dbw_polaris_joystick_demo/launch/: joystick_demo.launch.xml
dbw_polaris_joystick_demo/src/: JoystickDemo.cpp
dbw_polaris_msgs/: CHANGELOG.rst  package.xml
ds_dbw/: CHANGELOG.rst  README.md  package.xml
ds_dbw/scripts/: ros_install.bash  sdk_install.bash
ds_dbw_can/: CHANGELOG.rst  package.xml
ds_dbw_can/include/ds_dbw_can/: PlatformMap.hpp  PlatformVersion.hpp  dispatch.hpp
ds_dbw_can/src/: DbwNode.cpp  DbwNode.hpp
ds_dbw_can/tests/: test_platform_map.cpp  test_platform_version.cpp
ds_dbw_joystick_demo/: CHANGELOG.rst  README.md  package.xml
ds_dbw_joystick_demo/launch/: joystick_demo.launch.xml
ds_dbw_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.hpp
ds_dbw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ds_dbw_msgs/msg/: BrakeDiagnostics.msg  BrakeInfo.msg  BrakeReport.msg  EcuInfo.msg  GearDiagnostics.msg  GearReport.msg  MiscCmd.msg  MiscReport.msg  SteeringCmd.msg  SteeringDiagnostics.msg  SteeringReport.msg  SystemReport.msg  ThrottleDiagnostics.msg  ThrottleReport.msg  UlcCmd.msg  VehicleVelocity.msg
