<?xml version="1.0"?>
<package format="2">
  <name>dbw_fca_msgs</name>
  <version>1.2.1</version>
  <description>
    Drive-by-wire messages for the Chrysler Pacifica
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_fca_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_fca_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
  </export>

</package>
