<?xml version="1.0"?>
<package format="2">
  <name>dbw_ford</name>
  <version>1.4.1</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Lincoln MKZ DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dbw_ford_can</exec_depend>
  <exec_depend>dbw_ford_description</exec_depend>
  <exec_depend>dbw_ford_joystick_demo</exec_depend>
  <exec_depend>dbw_ford_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
