<?xml version="1.0"?>
<package format="2">
  <name>dbw_ford_can</name>
  <version>1.4.1</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Lincoln MKZ DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>dbw_ford_msgs</depend>

  <build_depend>dataspeed_can_msg_filters</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>socketcan_bridge</exec_depend>
  <exec_depend>dataspeed_can_usb</exec_depend>
  <exec_depend>dbw_ford_description</exec_depend>
  <exec_depend>dataspeed_ulc_can</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
