<?xml version="1.0"?>
<package format="2">
  <name>dbw_ford_description</name>
  <version>1.4.1</version>
  <description>
    URDF and meshes describing the Lincoln MKZ.
  </description>

  <license>BSD</license>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rviz</test_depend> <!-- Used to satisfy the roslaunch_add_file_check() test -->

</package>
