<?xml version="1.0"?>
<package format="2">
  <name>dbw_ford_msgs</name>
  <version>1.4.1</version>
  <description>
    Drive-by-wire messages for the Lincoln MKZ
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
  </export>

</package>
